2009-Mar-17  yselkowitz

	* bin/prep_freedesktop_mime.sh: Remove any update-generated files.

	* bin/prep_gtk2_modules.sh: Remove pango module handling, as only
	pango itself needs it.

2009-Mar-11  yselkowitz

	* lib/git.cygclass (git_fetch): Honour .gitmodules.

	* bin/prep_freedesktop_mime.sh: Remove more update-generated files.

	* bin/cygport.in (__pkg_diff): Ignore *.qm (Qt compiled l10n files).

	* bin/make_etc_defaults: Create preremove script to remove if unchanged.

2009-Feb-24  yselkowitz

	* bin/prep_fonts_dir.sh: Fix encodings.dir creation (sourceware bug 9872).

2009-Feb-12  yselkowitz

	* lib/gstreamer.cygclass: Define GIT_URI.

	* lib/pygtk.cygclass: Allow usage within packages which ship their
	Python bindings together with the C library.

	* lib/xfce4.cygclass: Fix XFCE_VERSION for nano-version releases.

	* lib/kde3.cygclass (kde3_compile): Remove --disable-xinerama.

	* bin/cygport.in (__prepstrip): Assure that files are really PE-COFF
	before stripping them. (e.g. some .oct files aren't from Octave.)

	* bin/cygport.in (docinto): Leave dodir until dodoc, as it is needed
	then for the default case.

	* bin/cygport.in (__pkg_diff): Exclude binary graphics files by default.

2009-Feb-02  yselkowitz

	* lib/kde4.cygclass: Set SRC_URI for stable automoc4 and phonon.

	* lib/qt4-qmake.cygclass (cygqmake4): Pass given arguments to qmake.

2009-Jan-18  yselkowitz

	* lib/autotools.cygclass (cygautoreconf): Don't force path of autoreconf.

	* lib/kde4.cygclass: Update SRC_URI for automoc4, amarok-2, kdevplatform.

	* lib/ruby-gnome2.cygclass (ruby_gnome2_install): Fix installation
	of partially overlapping ri doc modules.

	* lib/bzr.cygclass (bzr_fetch),
	* lib/cvs.cygclass (cvs_fetch),
	* lib/git.cygclass (git_fetch),
	* lib/hg.cygclass (hg_fetch),
	* lib/svn.cygclass (svn_fetch): Use tar --exclude-vcs.

	* lib/autotools.cygclass (cygautoreconf): Install config.rpath based on
	configure.ac, as configure is not always present yet (e.g. CVS checkouts).
